--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Public Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+.navbar {
+  background-color: #226684;
+}
+
+.category-aktif {
+  background-color: #226684;
+  color: white;
+}
+
+.btn-primary {
+  background-color: #226684;
+}
+
+.btn-success {
+  background-color: #226684;
+  width: 100%;
+}
+
+@media only screen and (max-height: 1000px) {
+  .hasil {
+    height: 380px;
+  }
+
+  .menu {
+    height: 500px;
+  }
+}
+
+.overflow-auto::-webkit-scrollbar {
+  display: none;
+}
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
